<resources>
    <string name="app_name">MyNameGame</string>
    <!--GAME MODES -->
    <string name="game_modes">Game Modes</string>
    <string name="matt">Matt</string>
    <string name="random">Random</string>
    <string name="normal">Normal</string>
    <string name="hint">Hint</string>
    <string name="custom">Custom</string>

    <!--VIEWMODEL HELP-->
    <string name="correct_field">%s</string>
    <string name="high_score_field">%s</string>
    <string name="mat">mat</string>
    <string name="high_score_camel">highScore</string>
    <string name="two_cents_camel">twoCents</string>
    <string name="correct_field_ext">Correct: %s</string>
    <string name="high_score_field_ext">High Score: %s</string>
    <string name="who_is_field">Who is: %s?</string>
    <string name="who_is_field_last">Who is: %s?</string>
    <string name="matthew">matthew</string>
    <string name="retry">Retry</string>
    <string name="NA">NA</string>

    <!--NAV-->
    <string name="nav_normal">N</string>
    <string name="nav_matt">M</string>
    <string name="nav_hint">H</string>
    <string name="nav_custom">C</string>
    <string name="nav_stats">S</string>

    <!--PEOPLE-->
    <string name="img_person">img_person</string>

    <!--ITEM SCORE-->
    <string name="reset_score">RESET SCORE</string>
    <string name="reset_top_score">RESET TOP SCORE</string>
    <string name="share_score">SHARE SCORE</string>
    <string name="current_streak">Current Streak:</string>
    <string name="high_score">High Score:</string>
    <string name="view_high_scores">View High Scores</string>
    <string name="most_known_person">Most Known Person:</string>

    <!--HIGH SCORE HEADER-->
    <string name="name">Name</string>
    <string name="name_caret">Name^</string>
    <string name="location">Location</string>
    <string name="location_caret">Location^</string>
    <string name="two_cents">Two Cents</string>
    <string name="two_cents_caret">Two Cents^</string>
    <string name="score">Score</string>
    <string name="score_caret">Score^</string>

    <!--HOW TO PAGE-->
    <string name="welcome_name_game">Welcome to the Name Game</string>
    <string name="one_game_mode">1. Select a Game Mode</string>
    <string name="two_press_play">2. Press Play</string>
    <string name="three_make_guess">3. Make a Guess</string>
    <string name="view_personal_stats">View Personal Stats</string>
    <string name="upload_stats">Upload Stats</string>
    <string name="view_world_stats">View Worldwide Stats</string>

    <!--STATS PAGE-->
    <string name="lifetime_correct">Lifetime Correct</string>
    <string name="lifetime_incorrect">Lifetime Incorrect</string>
    <string name="percent_correct">% Correct</string>
    <string name="world_stats">Worldwide Stats</string>
    <string name="sign_out">Sign Out %s</string>
    <string name="score_rank">Score %d Rank %s</string>
    <string name="your_score">Your Score…</string>
    <string name="email">email</string>

    <!--MENU-->
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="menu_add_desc">Enter below information to add to worldwide stats</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--ERRORS-->
    <string name="connectivity_error">Cannot connect to the internet</string>
    <string name="standard_error_message">We\'re sorry, something went wrong, and we couldn\'t complete your request. Please try again.</string>
    <string name="standard_error_api">We\'re experiencing difficulty. Processing…</string>
    <string name="error_message_happy">Hey! We\'re not sure why there\'s a problem getting the profiles but here\'s the error:</string>
    <string name="settings">Settings</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="cancel">Cancel</string>
    <string name="start_game_first">Start the game first</string>
    <string name="error_disabled">This feature is currently disabled!</string>
    <string name="error_please_sign_in">Please sign in.</string>
    <string name="error_not_setup">Not setup!</string>
    <string name="error_loading_two">ERROR LOADING %s or %s</string>

    <!--GAME NUMBERS-->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
</resources>
