<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="wt.cr.com.mynamegame.infrastructure.ui.stats.CurrentSortMode"/>
        <variable
            name="activityViewModel"
            type="wt.cr.com.mynamegame.infrastructure.ui.stats.StatsActivityViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@{activityViewModel.selectedSortMode == CurrentSortMode.NAME ? @string/name_caret : @string/name}"
            tools:text="Name"
            android:onClick="@{v -> activityViewModel.sortByName()}"
            android:textAlignment="textStart"
            style="@style/WorldRankColumnStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{activityViewModel.selectedSortMode == CurrentSortMode.LOCATION ? @string/location_caret : @string/location}"
            tools:text="@string/location"
            android:onClick="@{v -> activityViewModel.sortByLocation()}"
            android:textAlignment="textStart"
            style="@style/WorldRankColumnStyle"
            app:layout_constraintStart_toEndOf="@+id/textView26"
            app:layout_constraintTop_toTopOf="@+id/textView26" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            tools:text="@string/two_cents"
            android:text="@{activityViewModel.selectedSortMode == CurrentSortMode.TWOCENTS ? @string/two_cents_caret : @string/two_cents}"
            android:onClick="@{v -> activityViewModel.sortByCents()}"
            android:textAlignment="center"
            style="@style/WorldRankColumnStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView28"
            app:layout_constraintStart_toEndOf="@+id/textView29"
            app:layout_constraintTop_toTopOf="@+id/textView26" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            tools:text="@string/score"
            android:text="@{activityViewModel.selectedSortMode == CurrentSortMode.SCORE ? @string/score_caret : @string/score}"
            android:onClick="@{v -> activityViewModel.sortByScore()}"
            android:textAlignment="center"
            style="@style/WorldRankColumnStyle"
            app:layout_constraintBottom_toBottomOf="@+id/textView27"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView27" />
    </android.support.constraint.ConstraintLayout>
</layout>
