<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="activityViewModel"
            type="wt.cr.com.mynamegame.infrastructure.ui.home.HomeActivityViewModel" />
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_game_modes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/game_modes"
            android:textSize="24sp"
            android:visibility="@{!activityViewModel.isGameStarted}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{activityViewModel.numberCorrectField}"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/tv_game_modes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Correct: 2" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{activityViewModel.numberIncorrectField}"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_game_modes"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Incorrect: 1" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/paleGrey"
            android:orientation="horizontal"
            android:visibility="@{!activityViewModel.isGameStarted}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_game_modes">

            <Button
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@{activityViewModel.normalSelected ? @drawable/style_radius_button_sel : @drawable/style_radius_button}"
                android:onClick="@{v -> activityViewModel.normalMode()}"
                android:text="@string/normal"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@{activityViewModel.mattSelected ? @drawable/style_radius_button_sel : @drawable/style_radius_button}"
                android:onClick="@{v -> activityViewModel.mattMode()}"
                android:text="@string/matt"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@{activityViewModel.hintSelected ? @drawable/style_radius_button_sel : @drawable/style_radius_button}"
                android:onClick="@{v -> activityViewModel.hintMode()}"
                android:text="@string/hint"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@{activityViewModel.fourSelected ? @drawable/style_radius_button_sel : @drawable/style_radius_button}"
                android:onClick="@{v -> activityViewModel.fourMode()}"
                android:text="4"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_multi_item"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            app:layout_marginTop="@{activityViewModel.isGameStarted ? 60 : 4}"
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/paleGrey"
            android:orientation="horizontal"
            android:visibility="@{activityViewModel.isGameStarted}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btn_one"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/style_circle_button"
                android:onClick="@{v -> activityViewModel.selectClicked(1)}"
                android:text="1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/btn_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/style_circle_button"
                android:onClick="@{v -> activityViewModel.selectClicked(2)}"
                android:text="2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/btn_three"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/style_circle_button"
                android:onClick="@{v -> activityViewModel.selectClicked(3)}"
                android:text="3"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/btn_four"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/style_circle_button"
                android:onClick="@{v -> activityViewModel.selectClicked(4)}"
                android:text="@string/four"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/btn_five"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/style_circle_button"
                android:onClick="@{v -> activityViewModel.selectClicked(5)}"
                android:text="@string/five"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <Button
                android:id="@+id/btn_six"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/style_circle_button"
                android:onClick="@{v -> activityViewModel.selectClicked(6)}"
                android:text="@string/six"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="sans" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/blue"
            android:text="@{activityViewModel.questionText}"
            android:visibility="@{activityViewModel.isGameStarted}"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="WHO IS: MATT KEMP?" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="24dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@{activityViewModel.isGameStarted ? @color/errorRed : @color/cart_status_bar}"
            android:src="@{activityViewModel.isGameStarted ? @android:drawable/ic_menu_close_clear_cancel : @android:drawable/ic_media_play}"
            android:onClick="@{v -> activityViewModel.startGame()}"
            app:layout_constraintBottom_toBottomOf="@+id/rv_multi_item"
            app:layout_constraintEnd_toEndOf="parent" />


    </android.support.constraint.ConstraintLayout>
</layout>